[project]
name = "myst-calculator"
version = "0.1.0"
description = "A calculator project with separate core, CLI, and UI modules."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
myst-calculator = "myst_calculator.cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.black]
target-version = ["py314"]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
